# kekchat

./: .gitignore  README.md  package.json  rollup.config.js
client/: tsconfig.json
client/public/: global.css  index.html
client/src/: App.svelte  const.js  store.ts  stores.js  websocket.js
client/src/api/: requests.ts
client/src/components/: Chat.svelte  ChatHistory.svelte  ChatMessage.svelte  KekLogo.svelte  Login.svelte  Username.svelte
server/: Cargo.toml
server/src/: main.rs
util/: ip.json  ipTool.js
