[package]
name = "kekchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.19", features = ["full"]}
tokio-tungstenite = "^0.17"
tungstenite = "0.17"
futures-channel = "^0.3"
futures-util = "^0.3"
#warp = "^0.3.2"
#serde = {version = "1.0", features = ["derive"]}
#serde_json = "1.0"
#futures = { version = "0.3", default-features = false }
#uuid = { version = "0.4", features = ["serde", "v4"] }
